--- a/back_code/src/main/resources/jdbc.properties
+++ b/back_code/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.url = jdbc:mysql://localhost:3306/erhuo?useSSL=false&serverTimezone=UTC&allowMultiQueries=true
 jdbc.username = root
-jdbc.pwd = 5642818
+jdbc.pwd = 123456
 jdbc.max = 20
